# uppaalLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  setup.sh
config/: CMakeLists.txt  config.cpp  config.h  config_macros.h  config_wrapper.cpp  config_wrapper.h  dynamic_json.json  jsonu.h  log.h  macro.txt  mylib.cpp  mylib.h  static_json.json
lib/uppaal/: data.json  static_json.json
lib/uppaal/bin-Linux/: ans.xml  data.txt
lib/uppaal/bin-Linux/external files/: socketserver
lib/uppaal/demo/: ModelDemo.java
lib/uppaal/demo/smc/: ball.xml  genosc-hybrid.xml  genosc.xml  train-gate-stat.xml  trig.xml
lib/uppaal/demo/stratego/: cruise.xml  newspaper.xml
lib/uppaal/lib/: data.txt
test/: CMakeLists.txt  MethodsRequiredTesting.txt  data.json  foo.q  foo.xml  main.py  static_json.json  testMain.cpp  test_config.cpp  test_config_json.cpp  test_json.cpp  test_libconfig.cpp  test_mylib.cpp
util/: jsonu.h  meta.h
